[package]
name = "distributed-neural-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
web-sys = { version = "0.3", features = [
  "console",
  "Performance",
  "Window",
  "Document", 
  "Element",
  "Storage",
  "CryptoKey",
  "SubtleCrypto",
] }

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
lto = true
panic = "abort" 