[package]
name = "distributed-neural-network"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "Performance",
  "WebSocket",
  "BinaryType",
  "MessageEvent",
  "RtcPeerConnection",
  "RtcDataChannel", 
  "RtcConfiguration",
  "RtcIceServer",
  "RtcSessionDescription",
  "RtcSessionDescriptionInit",
  "RtcSdpType",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcDataChannelInit",
  "RtcDataChannelType",
  "RtcDataChannelState",
  "RtcPeerConnectionState",
  "EventTarget",
  "Event",
  "CloseEvent",
  "ErrorEvent",
  "RtcPeerConnectionIceEvent"
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.0", features = ["v4", "js"] }
rand = { version = "0.8", features = ["getrandom"] }

[dependencies.wasm-bindgen-futures]
version = "0.4"

[profile.release]
opt-level = "s"
lto = true

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true } 